syntax = "proto3";

package rivet.backend.pkg.chat_thread.msg.create_complete;

import "proto/common.proto";

/// name = "msg-chat-thread-create-complete"
/// parameters = [
/// 	{ name = "request_id" },
/// ]
message Message {
	rivet.common.Uuid request_id = 2;

	/// This may be different than the thread ID passed in to the thread
	/// creation request if there was a race condition creating a thread for
	/// the topic.
	rivet.common.Uuid thread_id = 1;
}
